Update main page

--- a/index.html
+++ b/index.html
@@ -62,37 +62,27 @@
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6">
-                <h2>YT韓團</h2>
-                <p>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=POe9SOEKotk">Shut Down</a> /
-                    <a target="_blank" href="https://www.youtube.com/watch?v=gQlMMD8auMs">Pink Venom</a>
-                </p>
-                <p>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=dYRITmpFbJ4">Girls</a> /
-                    <a target="_blank" href="https://www.youtube.com/watch?v=ZeerrnuLi5E">Black Mamba</a>
-                </p>
-                <p>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=--FmExEAsM8">ELEVEN</a> /
-                    <a target="_blank" href="https://www.youtube.com/watch?v=F0B7HDiY-10">After LIKE</a>
-                </p>
-                <p>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=n0j5NPptyM0">WA DA DA</a> /
-                    <a target="_blank" href="https://www.youtube.com/watch?v=w8N3nZ7reZk">Sugar Rush</a>
-                </p>
+                <h2>YT音樂</h2>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCkbbMCA40i18i7UdjayMPAg">BLACKPINK</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCEdZAdnnKqbaHOlv8nM6OtA">aespa</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UC_4Y1QqJr60C5Z7-eQWy-mw">IVE</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCAKvDuIX3m1AUdPpDSqV_3w">Kep1er</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCWT2ZfW7d8YI-HinHEVhyCA">(G)I-DLE</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <h2>YT英語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=g9m7ezjEsMA&list=PL41R2vH_CL42mcmegHYYDPYjc-UvsMwuV&index=1">Learn English Conversation</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=R8QPo5yIT5Q&list=PLaNNx1k0ao1u-x_nKdKNh7cKALzelzXjY&index=1">Learn English with Emma</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=dcOGNwiqjP0&list=PLzMXToX8Kzqggrhr-v0aWQA2g8pzWLBrR&index=1">English with Lucy</a></p>
+                <h2>YT外語</h2>
+                <p><a target="_blank" href="https://www.youtube.com/@letstalk">Let's Talk</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo&index=1">Computer Science</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Yuka老師</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>充實學習</h2>
                 <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
+                <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
                 <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
-                <p><a target="_blank" href="https://www.quora.com/">Quora</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>其它</h2>
