Modify index page

--- a/index.html
+++ b/index.html
@@ -71,17 +71,18 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>YT外語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/@letstalk">Let's Talk</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@MrRamihaha">Rami</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English With Vanessa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo&index=1">Computer Science</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Yuka老師</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>充實學習</h2>
                 <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
                 <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
