--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?220512">
+    <link rel="stylesheet" href="/static/main.css?230120">
 </head>
 <body>
     <div class="jumbotron-main">
@@ -19,6 +19,7 @@
     </div>
     <div class="container page-main mb-5">
         <div class="row">
+
             <div class="col-lg-3 col-md-6">
                 <h2>生活與購物</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
@@ -29,38 +30,29 @@
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
+
             <div class="col-lg-3 col-md-6">
-                <h2>工作</h2>
-                <p><a target="_blank" href="https://github.com/">GitHub</a></p>
-                <p><a target="_blank" href="https://render.com/">Render</a></p>
-                <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
-                <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
-                <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+                <h2>充實學習</h2>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
                 <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
+                <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
+                <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
+                <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@MrRamihaha">蕾咪 Rami</a></p>
+                <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
             </div>
+
             <div class="col-lg-3 col-md-6">
-                <h2>投資理財</h2>
-                <p><a target="_blank" href="https://www.cmoney.tw/finance/">CMoney股市</a></p>
-                <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
-                <p><a target="_blank" href="https://www.moneydj.com/">MoneyDJ</a></p>
-                <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
-                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel股感</a></p>
-                <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
-                <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
+                <h2>YT學習</h2>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English With Vanessa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=4H3b5wATFos&list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">孔令傑－C++程式設計</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=yNvs6w8zFCk&list=PLC7S3OpzMqm9EbRyd1va2KAP0uepEQdNQ">蘇承芳－微積分預備</a></p>
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h2>知識與技能</h2>
-                <p><a target="_blank" href="https://www.bnext.com.tw/">數位時代</a></p>
-                <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
-                <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
-                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
-                <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">G Coding Competitions</a></p>
-                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Hacker Cup</a></p>
-            </div>
-        </div>
-        <div class="row">
+
             <div class="col-lg-3 col-md-6">
                 <h2>YT音樂</h2>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCkbbMCA40i18i7UdjayMPAg">BLACKPINK</a></p>
@@ -69,22 +61,35 @@
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCAKvDuIX3m1AUdPpDSqV_3w">Kep1er</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCWT2ZfW7d8YI-HinHEVhyCA">(G)I-DLE</a></p>
             </div>
+
             <div class="col-lg-3 col-md-6">
-                <h2>YT外語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/@MrRamihaha">Rami</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English With Vanessa</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
+                <h2>投資理財</h2>
+                <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
+                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel股感</a></p>
+                <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
+                <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
+                <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
+                <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
+
             <div class="col-lg-3 col-md-6">
-                <h2>充實學習</h2>
-                <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
-                <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
-                <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
-                <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
+                <h2>知識與技能</h2>
+                <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
+                <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">G Coding Competitions</a></p>
+                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Hacker Cup</a></p>
             </div>
+
+            <div class="col-lg-3 col-md-6">
+                <h2>工作</h2>
+                <p><a target="_blank" href="https://github.com/">GitHub</a></p>
+                <p><a target="_blank" href="https://render.com/">Render</a></p>
+                <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
+                <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
+                <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+            </div>
+
             <div class="col-lg-3 col-md-6">
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
