--- a/porn/index.html
+++ b/porn/index.html
@@ -9,15 +9,14 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?220512">
+    <link rel="stylesheet" href="/static/main.css?230120">
 
   </head>
 
   <body>
     <div class="jumbotron-porn">
       <div class="container">
-        <h1>Porn Bookmarks</h1>
-        <a class="text-white" href="/">Home</a>
+        <h1>Porn Links <small><a class="text-white smaller" href="/">Home</a></small></h1>
       </div>
     </div>
 
