Update misc page

--- a/misc/index.html
+++ b/misc/index.html
@@ -78,6 +78,9 @@
           <p><a target="_blank" href="https://xkcd.com/">xkcd</a></p>
           <p><a target="_blank" href="https://w3techs.com/sites">W3Techs</a></p>
           <p><a target="_blank" href="https://soundoftext.com/">Sound of Text</a></p>
+          <p><a target="_blank" href="https://picwish.com/tw/remove-background">PicWish 照片去背</a></p>
+          <p><a target="_blank" href="https://smallpdf.com/zh-TW/edit-pdf">Smallpdf 編輯器</a></p>
+          <p><a target="_blank" href="https://color.adobe.com/zh/create/color-wheel">Adobe Color</a></p>
         </div>
       </div>
     </div>
