Modify home and misc

--- a/misc/index.html
+++ b/misc/index.html
@@ -61,7 +61,15 @@
 
       <div class="row">
         <div class="col-lg-3 col-md-6">
-          <h2>教育</h2>
+          <h2>教授的課</h2>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=4H3b5wATFos&list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">台大孔令傑 - C++程式設計</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=yNvs6w8zFCk&list=PLC7S3OpzMqm9EbRyd1va2KAP0uepEQdNQ">中央蘇承芳 - 微積分預備</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=tAVlnCx2Fo4&list=PLj6E8qlqmkFvFe7mM5hKvyXmcrMTkEO4X">交大溫宏斌 - 計算機概論</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=KUR_cHn_Btc&list=PLpltJwWB6egJRmJSoZwxsZ86X_D5OYrXQ">政大蔡炎龍 - 人工智慧</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=7XZR0-4uS5s&list=PLJV_el3uVTsPM2mM-OQzJXziCGJa8nJL8">台大李宏毅 - 機器學習</a></p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <h2>線上課程</h2>
           <p><a target="_blank" href="https://www.openedu.tw/">中華開放教育平台</a></p>
           <p><a target="_blank" href="https://market.cloud.edu.tw">教育大市集</a></p>
           <p><a target="_blank" href="https://www.learnmode.net/">LearnMode 學習吧</a></p>
