--- a/misc/index.html
+++ b/misc/index.html
@@ -38,6 +38,7 @@
           <p><a target="_blank" href="https://arcade.makecode.com/">MakeCode Arcade</a></p>
           <p><a target="_blank" href="https://jamstack.org/generators/">Static Site Generators</a></p>
           <p><a target="_blank" href="https://globalgamejam.org/">Global Game Jam</a></p>
+          <p><a target="_blank" href="https://w3techs.com/sites">W3Techs</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>部落</h2>
@@ -53,7 +54,6 @@
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20103434/ironman/1225">資料安全與簡單加密</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20120178/ironman/2654">LINE BOT</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/5681">試競程</a></p>
-          <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20119871/ironman/2210">從 LeetCode 學演算法</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20113462/ironman/2977">放膽面對 LeetCode</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/2672">動態規劃百題</a></p>
         </div>
@@ -83,8 +83,7 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>其它</h2>
-          <p><a target="_blank" href="https://xkcd.com/">xkcd</a></p>
-          <p><a target="_blank" href="https://w3techs.com/sites">W3Techs</a></p>
+          <p><a target="_blank" href="https://asr.yating.tw/">雅婷逐字稿</a></p>
           <p><a target="_blank" href="https://soundoftext.com/">Sound of Text</a></p>
           <p><a target="_blank" href="https://picwish.com/tw/remove-background">PicWish 照片去背</a></p>
           <p><a target="_blank" href="https://smallpdf.com/zh-TW/edit-pdf">Smallpdf 編輯器</a></p>
