--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
-                <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">G Coding Competitions</a></p>
-                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Hacker Cup</a></p>
+                <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">Google Competitions</a></p>
+                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
@@ -85,7 +85,7 @@
                 <p><a target="_blank" href="https://render.com/">Render</a></p>
                 <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
                 <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
-                <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+                <p><a target="_blank" href="https://console.developers.google.com/">Google API</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
